--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="card-header">Ciekawostka</div>
             <div class="card-body">
                 <h4 class="card-title">Cookies 🍪</h4>
-                <p class="card-text">Strona nie korzysta z plików cookies, proszę uszanować naszą decyzję -
+                <p class="card-text">Strona nie korzysta z plików cookies, proszę uszanować moją decyzję -
                     dziękujemy... 🤧</p>
             </div>
         </div>
@@ -77,7 +77,7 @@
             <div class="card-header">Powiadomienie</div>
             <div class="card-body">
                 <h4 class="card-title">Reklamy 📮</h4>
-                <p class="card-text">Na stronie nie są wyświetlane reklamy, proszę uszanować naszą decyzję -
+                <p class="card-text">Na stronie nie są wyświetlane reklamy, proszę uszanować moją decyzję -
                     dziękujemy... 😑
                 </p>
             </div>
