A very small update...
➕ a change that made certain elements on the page clearer.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         h1 {
             margin-top: 100px;
             margin-bottom: 0px;
-            justify-content: center;
         }
 
         h5 {
@@ -73,19 +72,8 @@
         <div class="card border-secondary mb-3" style="max-width: 20rem;">
             <div class="card-header">Ciekawostka</div>
             <div class="card-body">
-                <h4 class="card-title">Cookies 🍪</h4>
-                <p class="card-text">Strona nie korzysta z plików cookies, proszę uszanować moją decyzję -
-                    dziękuje... 🤧</p>
-            </div>
-        </div>
-
-        <div class="card border-secondary mb-3" style="max-width: 20rem;">
-            <div class="card-header">Powiadomienie</div>
-            <div class="card-body">
-                <h4 class="card-title">Reklamy 📮</h4>
-                <p class="card-text">Na stronie nie są wyświetlane reklamy, proszę uszanować moją decyzję -
-                    dziękuje... 😑
-                </p>
+                <h4 class="card-title">Prywatność</h4>
+                <p class="card-text">Szanujemy ją, dlatego na stronie - nie znajdują się wszelkiego rodzaju pliki cookies oraz reklamy ⛔</p>
             </div>
         </div>
 
